<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".BuscaCepActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvSearchAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_cep_pelo_endereco"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"/>

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/background_gray_rounded"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:hint="@string/digite_rua"
        app:layout_constraintTop_toBottomOf="@id/tvSearchAddress" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/background_gray_rounded"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:maxLines="1"
        android:hint="@string/digite_cidade"
        app:layout_constraintTop_toBottomOf="@id/etStreet" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etCity"
        android:text="@string/buscar" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:textSize="16sp"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/buscar_endereco_pelo_cep" />

</androidx.constraintlayout.widget.ConstraintLayout>